CPG-DEV/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>AccountPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>AccountPlan__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is created as a part of Cargill Leap Project-IDCTask-0000000162</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualMargins__c</fullName>
        <label>Actual Margins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualResourceCost__c</fullName>
        <label>Actual Resource Cost</label>
        <summarizedField>ResourceTeam__c.ActualCost__c</summarizedField>
        <summaryForeignKey>ResourceTeam__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ActualVolume__c</fullName>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualMarginActual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Margin - Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualMarginEstimated__c</fullName>
        <label>Annual Margin - Estimated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualVolumeActual__c</fullName>
        <label>Annual Volume - Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualVolumeEstimated__c</fullName>
        <label>Annual Volume - Estimated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualVolumeProductRollup0Year__c</fullName>
        <label>Annual Volume - Product Rollup (0-Year)</label>
        <summarizedField>ProjectProduct__c.ProjectedVolume0YearImperial__c</summarizedField>
        <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AnnualVolumeProductRollup1Year__c</fullName>
        <label>Annual Volume - Product Rollup (1-Year)</label>
        <summarizedField>ProjectProduct__c.ProjectedVolume1YearImperial__c</summarizedField>
        <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_Product_Rollup_2_Year__c</fullName>
        <label>Annual Volume - Product Rollup (2-Year)</label>
        <summarizedField>ProjectProduct__c.ProjectedVolume2YearImperial__c</summarizedField>
        <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_Product_Rollup_3_Year__c</fullName>
        <label>Annual Volume - Product Rollup (3-Year)</label>
        <summarizedField>ProjectProduct__c.ProjectedVolume3YearImperial__c</summarizedField>
        <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Anticipated_Commercialization_Date__c</fullName>
        <inlineHelpText>Date anticipated to move to Measure and have a contract</inlineHelpText>
        <label>Anticipated Commercialization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clarizen_Project_Id__c</fullName>
        <externalId>true</externalId>
        <label>Clarizen Project Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercialization_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercialization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercialization_Date_at_Closed_Won__c</fullName>
        <label>Commercialization Date at Closed Won</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercialization_Date_at_Implement__c</fullName>
        <label>Commercialization Date at Implement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercialization_Date_at_Measure__c</fullName>
        <label>Commercialization Date at Measure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentUser__c</fullName>
        <formula>IF( CreatedById = $User.Id, &quot;True&quot;
,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Until_Commercialization__c</fullName>
        <formula>ABS(TODAY() -   Commercialization_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Commercialization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DevelopDate__c</fullName>
        <label>Develop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedMargins__c</fullName>
        <label>Estimated Margins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedResourceCost__c</fullName>
        <label>Estimated Resource Cost</label>
        <summarizedField>ResourceTeam__c.EstimatedCost__c</summarizedField>
        <summaryForeignKey>ResourceTeam__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EstimatedVolume__c</fullName>
        <label>Estimated Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImplementDate__c</fullName>
        <label>Implement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeasureDate__c</fullName>
        <label>Measure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hold_Date__c</fullName>
        <label>On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityCloseDate__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityRecordType__c</fullName>
        <formula>Opportunity__r.RecordType.Name</formula>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunitySpace__c</fullName>
        <formula>TEXT( Opportunity__r.OpportunitySpace__c )</formula>
        <label>Opportunity Space</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>Ideation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnualVolume__c</fullName>
        <label>Projected Annual Volume</label>
        <summaryForeignKey>ProjectOpportunity__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Opportunity__r.Owner.CargillRegion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Project_Volume_CM__c</fullName>
        <formula>Total_Projected_CM_0_Year__c + Total_Projected_CM_1_Year__c + Total_Projected_CM_2_Year__c + Total_Projected_CM_3_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Project Volume CM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Project_Volume__c</fullName>
        <formula>Total_Projected_Volume_LB_0_Year__c + Total_Projected_Volume_LB_1_Year__c + Total_Projected_Volume_LB_2_Year__c + Total_Projected_Volume_LB_3_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Project Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Projected_CM_0_Year__c</fullName>
        <label>Total Projected CM (0-Year)</label>
        <summarizedField>ProjectProduct__c.Projected_CM_0_Year__c</summarizedField>
        <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Projected_CM_1_Year__c</fullName>
        <label>Total Projected CM (1-Year)</label>
        <summarizedField>ProjectProduct__c.Projected_CM_1_Year__c</summarizedField>
        <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Projected_CM_2_Year__c</fullName>
        <label>Total Projected CM (2-Year)</label>
        <summarizedField>ProjectProduct__c.Projected_CM_2_Year__c</summarizedField>
        <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Volume_LB_0_Year__c</fullName>
        <label>Total Projected Volume LB (0-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Volume_LB_1_Year__c</fullName>
        <label>Total Projected Volume LB (1-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Volume_LB_2_Year__c</fullName>
        <label>Total Projected Volume LB (2-Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>NPSS New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPSS Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBD CTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBD Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO PPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Ingredient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Out of Spec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Shelf Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Competitor Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Complaint/IMPASS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Process Results</description>
        <label>isApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>opportunity_Stage1__c</fullName>
        <description>Created to update through workflow</description>
        <label>opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Stage__c</columns>
        <columns>Phase__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
    </listViews>
    <listViews>
        <fullName>Projects_in_Measure_phase</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>equals</operation>
            <value>Measure</value>
        </filters>
        <label>Projects in &quot;Measure&quot; phase</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Project_Approved</fullName>
        <active>true</active>
        <description>Record Type after a Project is approved</description>
        <label>Project (Approved)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Draft</fullName>
        <active>true</active>
        <description>Initial Record Type when creating a Project</description>
        <label>Project (Draft)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Submitted</fullName>
        <active>true</active>
        <description>Record Type when a Project is submitted waiting for Approval</description>
        <label>Project (Submitted)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Opportunity_Team_Member__c</fullName>
        <label>Opportunity Team Member</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Project_Team_Member__c</fullName>
        <label>Project Team Member</label>
    </sharingReasons>
    <validationRules>
        <fullName>ProjectWithOpportunityStageClosedWon</fullName>
        <active>false</active>
        <description>If the related Opportunity is in Closed Won stage, then no update is allowed</description>
        <errorConditionFormula>ISPICKVAL(Opportunity__r.StageName , &apos;Closed Won&apos;)</errorConditionFormula>
        <errorMessage>If the related Opportunity is in Closed Won stage, then no update is allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_with_Opportunit_with_no_Products</fullName>
        <active>true</active>
        <description>Throw an error on Project if the related Opportunity does not have any Products associated</description>
        <errorConditionFormula>Opportunity__r.NumberOfProducts__c = 0</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Please select the opportunity which has products associated with it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Approval_to_Advance_Stage</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    isApproved__c = FALSE,
    NOT(ISPICKVAL(Stage__c, &quot;Draft&quot;))
   )</errorConditionFormula>
        <errorDisplayField>Stage__c</errorDisplayField>
        <errorMessage>Project Validation Error: Project Approval is required to advance Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RestrictProjectCreationOnOppAccRecType</fullName>
        <active>true</active>
        <description>Project can only be created when related opportunity&apos;s account record type is &quot;Prospect or Global Account or Regional Account Group&quot;.</description>
        <errorConditionFormula>AND(Opportunity__r.Account.RecordType.Name  &lt;&gt; &apos;Global Account&apos;,
Opportunity__r.Account.RecordType.Name  &lt;&gt; &apos;Prospect&apos;,
Opportunity__r.Account.RecordType.Name  &lt;&gt; &apos;Country Account Group&apos;)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Projects can only be created if the Opportunity ACCOUNT is a Prospect or Global Account or Regional Account Group Account Record Type.</errorMessage>
    </validationRules>
</CustomObject>